# fast_zero_v2

./: .env.exemplo  .gitattributes  .gitignore  pyproject.toml
fastapi_zero/: app.py  models.py  schemas.py  security.py
fastapi_zero/routers/: auth.py  todos.py  users.py
migrations/: env.py
migrations/versions/: a3e42d0e7ad9_create_todos_table.py  c3459565891b_create_table_users.py  f48bcb032fa0_alter_table_users.py
tests/: conftest.py  test_app.py  test_auth.py  test_db.py  test_security.py  test_users.py  todos.py
